--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,7 +4,8 @@
   "description": "A note taking application that allows the user to create, save, and delete notes.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "server.js"
   },
   "author": "",
   "license": "ISC",
